# infra

./: .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  README.md  deny.toml  justfile  lychee.toml  rustfmt.toml
.config/: nextest.toml  zepter.yaml
.github/workflows/: ci.yml  lychee.yml  stale.yml  ui.yml  zepter.yml
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs  reader.rs  storage.rs  test_utils.rs  types.rs
crates/audit/tests/: integration_tests.rs  s3_test.rs
crates/audit/tests/common/: mod.rs
crates/backend/: Cargo.toml  README.md
crates/backend/src/: connection.rs  group.rs  health.rs  http.rs  lib.rs  load_balancer.rs  safe_tip.rs
crates/basectl/: Cargo.toml
crates/basectl/src/: config.rs  l1_client.rs  lib.rs  rpc.rs
crates/basectl/src/app/: action.rs  app.rs  component.rs  core.rs  mod.rs  resources.rs  router.rs  runner.rs  view.rs
crates/basectl/src/app/views/: command_center.rs  config.rs  da_monitor.rs  factory.rs  flashblocks.rs  flashtest.rs  home.rs  loadtest.rs  mod.rs  text_input.rs
crates/basectl/src/commands/: command_center.rs  common.rs  config.rs  da.rs  flashblocks.rs  mod.rs
crates/basectl/src/tui/: app_frame.rs  help_sidebar.rs  homescreen.rs  mod.rs  status_bar.rs  terminal.rs
crates/cache/: Cargo.toml  README.md
crates/cache/src/: compressed.rs  lib.rs  memory.rs  redis.rs  rpc_cache.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: backends.rs  builder.rs  cli.rs  groups.rs  lib.rs  logging.rs  routing.rs  server.rs  validators.rs
crates/config/: README.md
crates/config/src/: lib.rs
crates/flashblocks-archiver/: Cargo.toml
crates/flashblocks-archiver/migrations/: 001_initial_schema.sql
crates/flashblocks-archiver/src/: archiver.rs  cli.rs  coordinator.rs  database.rs  lib.rs  metrics.rs  parquet.rs  s3.rs  types.rs  websocket.rs
crates/flashblocks-archiver/src/tests/: common.rs  integration_tests.rs  mod.rs  retention_integration_tests.rs  retention_tests.rs  sepolia_integration_tests.rs
crates/flashtest/: Cargo.toml
crates/flashtest/src/: client.rs  harness.rs  lib.rs  runner.rs  simulator.rs
crates/flashtest/src/suite/: blocks.rs  call.rs  contracts.rs  logs.rs  metering.rs  mod.rs  receipts.rs  subscriptions.rs
crates/gobrr/: Cargo.toml  README.md
crates/gobrr/src/: blocks.rs  calldata.rs  cli.rs  client.rs  config.rs  confirmer.rs  endpoints.rs  flashblock_watcher.rs  funder.rs  handle.rs  lib.rs  orchestrator.rs  runner.rs  sender.rs  signer.rs  stats.rs  tracker.rs  wallet.rs
crates/ingress-rpc/: Cargo.toml
crates/ingress-rpc/src/: lib.rs  queue.rs  service.rs  validation.rs
crates/mempool-rebroadcaster/: Cargo.toml
crates/mempool-rebroadcaster/src/: rebroadcaster.rs
crates/mempool-rebroadcaster/tests/: e2e_tests.rs
crates/roxy/backend/: Cargo.toml
crates/roxy/cli/: Cargo.toml
crates/roxy/fuzz/: Cargo.toml
crates/roxy/server/: Cargo.toml
crates/roxy/test-utils/: Cargo.toml
crates/roxy/traits/: Cargo.toml
crates/rpc/: Cargo.toml  README.md
crates/rpc-collector/: Cargo.toml
crates/rpc-collector/src/: bindings.rs  lib.rs  metrics.rs  utils.rs
crates/rpc-collector/src/recorders/: batches_info.rs  dispute_game_factory.rs  eth_balance.rs  event_counter.rs  gas_price_oracle.rs  l2_block_info.rs  mod.rs  output_oracle.rs  reorg_detector.rs
crates/rpc-collector/src/services/: divergence_checker.rs  flashblock_validator.rs  health_checker.rs  health_server.rs  mempool_listener.rs  mod.rs  snapshots.rs
crates/rpc-collector/src/services/collector/: l1.rs  l2.rs  mod.rs
crates/rpc/src/: codec.rs  lib.rs  rate_limiter.rs  router.rs  validator.rs
crates/runtime/: Cargo.toml  README.md
crates/runtime/src/: deterministic.rs  lib.rs  tokio_runtime.rs
crates/server/: Cargo.toml  README.md
crates/server/src/: error.rs  http.rs  lib.rs  metrics.rs  websocket.rs
crates/sidecrush/: Cargo.toml
crates/sidecrush/src/: lib.rs  metrics.rs
crates/sidecrush/src/api/: mod.rs  server.rs
crates/sidecrush/src/blockbuilding_healthcheck/: alloy_client.rs  mod.rs
crates/sidecrush/src/clients/: conductor.rs  mod.rs
crates/sidecrush/src/health/: block_age.rs  engine.rs  fork.rs  mod.rs  wrappers.rs
crates/test-utils/: Cargo.toml  README.md
crates/test-utils/src/: lib.rs
crates/tips/audit/: Cargo.toml
crates/tips/audit/src/: archiver.rs  reader.rs  storage.rs  types.rs
crates/tips/audit/tests/: integration_tests.rs  s3_test.rs
crates/tips/audit/tests/common/: mod.rs
crates/tips/core/: Cargo.toml
crates/tips/core/src/: lib.rs
crates/tips/ingress-rpc/src/: service.rs
crates/tips/system-tests/: Cargo.toml
crates/tips/system-tests/tests/: integration_tests.rs
crates/tips/system-tests/tests/common/: kafka.rs
crates/traits/: Cargo.toml  README.md
crates/traits/src/: backend.rs  cache.rs  codec.rs  lib.rs  load_balancer.rs  rate_limiter.rs  runtime.rs
crates/types/: README.md
crates/types/src/: error.rs  lib.rs
crates/utils/: Cargo.toml  README.md
crates/utils/src/: lib.rs
docker/: Dockerfile.audit  Dockerfile.ingress-rpc  docker-compose.tips-infra.yml  docker-compose.tips-services.yml
examples/full-demo/: Cargo.toml
examples/full-demo/src/: client.rs  config.rs  main.rs  output.rs
tests/: Cargo.toml  integration_test.rs
ui/tips/: Dockerfile
