[workspace]
resolver = "2"
members = ["crates/basectl", "crates/mempool-rebroadcaster", "crates/sidecrush", "bin/*", "crates/roxy/*", "crates/roxy/bin"]
default-members = ["bin/basectl"]
exclude = [".github/", "crates/roxy/fuzz"]

[workspace.package]
version = "0.0.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
homepage = "https://github.com/base/infra"
repository = "https://github.com/base/infra"

[workspace.lints.rust]
missing-debug-implementations = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
unnameable-types = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
redundant-clone = "warn"
clone-on-ref-ptr = "warn"
unnecessary-to-owned = "warn"
cloned-instead-of-copied = "warn"
flat-map-option = "warn"
implicit-clone = "warn"
or-fun-call = "warn"
use-self = "warn"
option-if-let-else = "warn"
uninlined-format-args = "warn"
manual-string-new = "warn"
single-char-pattern = "warn"
redundant-else = "warn"
match-same-arms = "warn"
undocumented-unsafe-blocks = "warn"
doc-markdown = "warn"
dbg-macro = "warn"
branches-sharing-code = "warn"
derive-partial-eq-without-eq = "warn"
explicit-into-iter-loop = "warn"
explicit-iter-loop = "warn"
iter-with-drain = "warn"
needless-pass-by-ref-mut = "warn"
string-lit-as-bytes = "warn"

[workspace.dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
anyhow = "1.0"
serde_yaml = "0.9"
dirs = "6.0"
arboard = "3.4"
dotenvy = "0.15.7"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
metrics = "0.24.1"
metrics-derive = "0.1"
cadence = "1.4"

# alloy
alloy-primitives = { version = "1.5.2", default-features = false, features = [
    "map-foldhash",
] }
alloy-genesis = { version = "1.5.2", default-features = false }
alloy-eips = { version = "1.5.2", default-features = false }
alloy-rpc-types = { version = "1.5.2", default-features = false }
alloy-rpc-types-engine = { version = "1.5.2", default-features = false }
alloy-rpc-types-eth = { version = "1.5.2" }
alloy-consensus = { version = "1.5.2" }
alloy-trie = { version = "0.9.1", default-features = false }
alloy-provider = { version = "1.5.2" }
alloy-hardforks = { version = "0.5" }
alloy-rpc-client = { version = "1.5.2" }
alloy-transport-http = { version = "1.5.2" }
alloy-sol-types = { version = "1.5.2" }
alloy-contract = { version = "1.5.2" }

# op-alloy
op-alloy-rpc-types = { version = "0.22.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.22.0", default-features = false }
op-alloy-consensus = { version = "0.22.0", default-features = false }

# base
base-flashtypes = { git = "https://github.com/base/base.git" }
basectl-cli = { path = "crates/basectl" }

# roxy - RPC proxy crates
roxy-types = { path = "crates/roxy/types" }
roxy-traits = { path = "crates/roxy/traits" }
roxy-runtime = { path = "crates/roxy/runtime" }
roxy-backend = { path = "crates/roxy/backend" }
roxy-cache = { path = "crates/roxy/cache" }
roxy-rpc = { path = "crates/roxy/rpc" }
roxy-server = { path = "crates/roxy/server" }
roxy-config = { path = "crates/roxy/config" }
roxy-test-utils = { path = "crates/roxy/test-utils" }
roxyproxy-cli = { path = "crates/roxy/cli" }

# roxy external dependencies
alloy-json-rpc = "1.0"
hyper = "1.0"
axum = { version = "0.7", features = ["ws"] }
reqwest = { version = "0.12", features = ["json"] }
tower = "0.4"
bytes = "1.0"
eyre = "0.6"
derive_more = { version = "2.0", features = ["full"] }
lru = "0.12"
redis = { version = "0.27", features = ["tokio-comp"] }
brotli = "8.0"
toml = "0.8"
rstest = "0.23"
criterion = { version = "0.5", features = ["async_tokio"] }
arbitrary = { version = "1", features = ["derive"] }
tokio-stream = "0.1"
metrics-exporter-prometheus = "0.17"
libfuzzer-sys = "0.4"
