[workspace]
resolver = "2"
members = ["crates/*", "bin/*"]
default-members = ["bin/*"]
exclude = [".github/"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT"

[workspace.lints.rust]
missing-debug-implementations = "warn"
unreachable-pub = "warn"
unused-must-use = "deny"
unnameable-types = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
missing-const-for-fn = "warn"
redundant-clone = "warn"
clone-on-ref-ptr = "warn"
unnecessary-to-owned = "warn"
cloned-instead-of-copied = "warn"
flat-map-option = "warn"
implicit-clone = "warn"
or-fun-call = "warn"
use-self = "warn"
option-if-let-else = "warn"
uninlined-format-args = "warn"
manual-string-new = "warn"
single-char-pattern = "warn"
redundant-else = "warn"
match-same-arms = "warn"
undocumented-unsafe-blocks = "warn"
doc-markdown = "warn"
dbg-macro = "warn"
branches-sharing-code = "warn"
derive-partial-eq-without-eq = "warn"
explicit-into-iter-loop = "warn"
explicit-iter-loop = "warn"
iter-with-drain = "warn"
needless-pass-by-ref-mut = "warn"
string-lit-as-bytes = "warn"

[workspace.dependencies]
cadence = "1.4"
clap = { version = "4.0", features = ["derive", "env"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
url = "2.5"
ratatui = "0.29"
crossterm = "0.28"
chrono = "0.4"
anyhow = "1.0"
serde_yaml = "0.9"
dirs = "6.0"
arboard = "3.4"
dotenvy = "0.15.7"
async-trait = "0.1"
mempool-rebroadcaster = { path = "./crates/mempool-rebroadcaster" }
sidecrush = { path = "./crates/sidecrush" }
metrics = "0.24.1"
metrics-derive = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "ansi", "json"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# alloy
alloy-primitives = { version = "1.5.2", default-features = false, features = [
    "map-foldhash",
] }
alloy-genesis = { version = "1.5.2", default-features = false }
alloy-eips = { version = "1.5.2", default-features = false }
alloy-rpc-types = { version = "1.5.2", default-features = false }
alloy-rpc-types-engine = { version = "1.5.2", default-features = false }
alloy-rpc-types-eth = { version = "1.5.2" }
alloy-consensus = { version = "1.5.2" }
alloy-trie = { version = "0.9.1", default-features = false }
alloy-provider = { version = "1.5.2" }
alloy-hardforks = { version = "0.5" }
alloy-rpc-client = { version = "1.5.2" }
alloy-transport-http = { version = "1.5.2" }
alloy-sol-types = { version = "1.5.2" }
alloy-contract = { version = "1.5.2" }

# op-alloy
op-alloy-rpc-types = { version = "0.22.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.22.0", default-features = false }
op-alloy-consensus = { version = "0.22.0", default-features = false }

# base
base-flashtypes = { git = "https://github.com/base/base.git" }
basectl-cli = { path = "crates/basectl" }
