[package]
name = "roxy-cache"
description = "Cache implementations for Roxy RPC proxy"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# internal
roxy-traits.workspace = true

# caching
lru.workspace = true

# async
tokio.workspace = true

# misc
bytes.workspace = true
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
