[package]
name = "flashblocks-archiver"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
metrics = { workspace = true }
metrics-derive = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
url = { workspace = true }
futures-util = { workspace = true }
tokio-tungstenite = { version = "0.26.2", features = ["native-tls"] }
brotli = "8.0.1"

# Retention dependencies
aws-sdk-s3 = { workspace = true }
aws-config = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
tempfile = "3.8"

# alloy
alloy-primitives = { workspace = true }
alloy-genesis = { workspace = true }
alloy-eips = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-rpc-types-engine = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-consensus = { workspace = true }
alloy-trie = { workspace = true }
alloy-provider = { workspace = true }
alloy-hardforks = { workspace = true }
alloy-rpc-client = { workspace = true }

# op-alloy
op-alloy-rpc-types = { workspace = true }
op-alloy-rpc-types-engine = { workspace = true }
op-alloy-rpc-jsonrpsee = { workspace = true }
op-alloy-network = { workspace = true }
op-alloy-consensus = { workspace = true }


# reth
reth = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-optimism-node = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-optimism-cli = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-rpc-eth-api = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-optimism-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0", features = [
    "serde",
] }
reth-rpc-convert = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-optimism-rpc = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-optimism-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-optimism-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-e2e-test-utils = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", tag = "v1.6.0" }

# rollup boost
rollup-boost = { git = "http://github.com/flashbots/rollup-boost", rev = "98fff8e059870d192739dd42d41f5244c49f4b9c" }
rustls = "0.23.23"

[[bin]]
name = "flashblocks-archiver"
path = "src/main.rs"

[dev-dependencies]
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio-test = "0.4"
