[package]
name = "rpc-collector"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
# async
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal", "sync", "time"] }
tokio-tungstenite.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
async-trait.workspace = true
futures-util.workspace = true

# alloy
alloy-primitives = { workspace = true, features = ["serde"] }
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-rpc-types-eth.workspace = true
alloy-consensus = { workspace = true, features = ["std"] }
alloy-sol-types.workspace = true
alloy-contract.workspace = true
alloy-rpc-client.workspace = true
alloy-transport-http.workspace = true
alloy-network.workspace = true
alloy-rlp.workspace = true
alloy-eips.workspace = true
alloy-network-primitives = { workspace = true }

# op-alloy
op-alloy-consensus = { workspace = true, features = ["std"] }
op-alloy-rpc-types.workspace = true
op-alloy-network = { workspace = true, features = ["std"] }

# metrics
cadence.workspace = true

# web
axum = { workspace = true, features = ["tokio", "http1", "json"] }
reqwest.workspace = true

# serialization
serde = { workspace = true }
serde_json = { workspace = true, features = ["std"] }

# base
base-primitives = { workspace = true, features = ["flashblocks"] }

# misc
tracing = { workspace = true, features = ["std"] }
anyhow = { workspace = true, features = ["std"] }
url.workspace = true
