[package]
name = "sidecrush"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sidecrush"
path = "src/bin/sidecrush.rs"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
cadence = { workspace = true }
cadence-macros = { workspace = true }
async-trait = "0.1"
anyhow = "1.0"
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# HTTP server
axum = { workspace = true }
tower-http = { workspace = true }

# Ethereum client deps (will be used for header fetching)
alloy-provider = { workspace = true }
alloy-transport-http = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }

# Platform-specific deps
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower = { version = "0.5", features = ["util"] }
tracing = { workspace = true }
