[package]
name = "sidecrush"
version.workspace = true
edition.workspace = true
license.workspace = true

[lints]
workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
cadence = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "std", "json"] }

# Ethereum client deps (will be used for header fetching)
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-rpc-types-eth = { workspace = true }
alloy-transport-http = { workspace = true }

