[package]
name = "sidecrush"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sidecrush"
path = "src/bin/sidecrush.rs"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["fmt", "std", "json"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "signal"] }
cadence = { workspace = true }
async-trait = "0.1"
anyhow = "1.0"
clap = { workspace = true }

# Ethereum client deps (will be used for header fetching)
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-transport-http = { workspace = true }
alloy-rpc-types-eth = { workspace = true }
alloy-consensus = { workspace = true }
alloy-primitives = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tracing = { workspace = true }
