[package]
name = "utils"
description = "Shared utility functions for logging, metrics, and config parsing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tracing = { workspace = true, features = ["std"] }
alloy-rpc-types = { workspace = true, features = ["eth"] }
metrics-exporter-prometheus = { workspace = true, features = ["http-listener"] }
tracing-subscriber = { workspace = true, features = ["std", "fmt", "ansi", "env-filter", "json"] }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }
